[gd_scene load_steps=7 format=3 uid="uid://d3mtf2sr565pf"]

[ext_resource type="SpriteFrames" uid="uid://txrqvsjo8l4o" path="res://scenes/enemies/parasite_baby.tres" id="1_dv7p1"]
[ext_resource type="Script" path="res://scenes/Intro.gd" id="1_vfoca"]
[ext_resource type="Script" path="res://scripts/PlayAnimation.gd" id="2_3b522"]
[ext_resource type="SpriteFrames" uid="uid://byornn4n685ng" path="res://scenes/player/player.tres" id="4_ir8as"]
[ext_resource type="SpriteFrames" uid="uid://bul1pacxjom2y" path="res://scenes/enemies/monster_baby.tres" id="5_5m106"]
[ext_resource type="SpriteFrames" uid="uid://bkxqaq0k5c4eq" path="res://scenes/enemies/monster_juvenile.tres" id="6_2nnch"]

[node name="Intro" type="Node2D"]
script = ExtResource("1_vfoca")
active = true

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -8.0
offset_top = -8.0
offset_right = 296.0
offset_bottom = 200.0
color = Color(0.129412, 0.129412, 0.129412, 1)

[node name="Part1" type="Node2D" parent="."]
visible = false

[node name="RichTextLabel" type="RichTextLabel" parent="Part1"]
offset_right = 288.0
offset_bottom = 192.0
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "[center]
Pandemic!

The world is under [shake][color=red]threat[/color][/shake]. 

A new [color=green]parasitic virus[/color] has emerged from the primodial soup, and is evolving at an alarming rate. 
[/center]"

[node name="Part2" type="Node2D" parent="."]
visible = false

[node name="RichTextLabel" type="RichTextLabel" parent="Part2"]
offset_right = 288.0
offset_bottom = 192.0
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "[center]
This parasite has grown large. 

So large that a single [color=purple]virion[/color] can [color=green]drain the energy[/color] from a human, feeding it with enough energy to [color=red]replicate[/color]. 
[/center]"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Part2"]
position = Vector2(96, 160)
scale = Vector2(4, 4)
sprite_frames = ExtResource("1_dv7p1")
animation = &"idle"
script = ExtResource("2_3b522")

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="Part2"]
position = Vector2(176, 160)
scale = Vector2(4, 4)
sprite_frames = ExtResource("1_dv7p1")
animation = &"idle"
script = ExtResource("2_3b522")

[node name="Part3" type="Node2D" parent="."]
visible = false

[node name="RichTextLabel" type="RichTextLabel" parent="Part3"]
offset_right = 288.0
offset_bottom = 192.0
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "[center]
Human-kind has one final defense.

A human expertly trained in the eradication of viruses.

A [color=red]SUPER[/color] [color=blue]INOCULATOR[/color]! 
[/center]"

[node name="AnimatedSprite2D3" type="AnimatedSprite2D" parent="Part3"]
position = Vector2(248, 152)
scale = Vector2(4, 4)
sprite_frames = ExtResource("4_ir8as")
animation = &"idle_down"
script = ExtResource("2_3b522")

[node name="Part4" type="Node2D" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="Part4"]
offset_right = 288.0
offset_bottom = 192.0
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "[center]
The parasites will attempt to consume anything they can to multiply, including the local fauna.

Don't let them!
[/center]"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Part4"]
position = Vector2(96, 160)
scale = Vector2(4, 4)
sprite_frames = ExtResource("5_5m106")
animation = &"idle"
flip_h = true
script = ExtResource("2_3b522")

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="Part4"]
position = Vector2(176, 160)
scale = Vector2(4, 4)
sprite_frames = ExtResource("6_2nnch")
animation = &"idle"
script = ExtResource("2_3b522")

[node name="Part5" type="Node2D" parent="."]
visible = false

[node name="RichTextLabel" type="RichTextLabel" parent="Part5"]
offset_right = 288.0
offset_bottom = 192.0
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "[center]
Take your super-powered inoculation gun

Infiltrate the parasitic hive

Destroy the virus

Save the world!
[/center]"
